Loading sequence and delay
+ A custom form layout (if appliable) is now loaded within initialiseForm() before other presentation logic to control field visibility.
+ There is a slight delay in loading the prepared form; this is to prevent any noticeable flickers of the uncustomised form.

--- a/vf-list-boilerplate.html
+++ b/vf-list-boilerplate.html
@@ -85,6 +85,14 @@ Form Customisation Release: YYMMDD
     else if (__currentURL.indexOf("EditForm.aspx")>=0) __formMode=2;
 
     /**
+     * Apply a custom form layout if instructed to do so.
+     */
+     if (_isCustomLayoutUsed) {
+      vfApplyCustomLayout();
+      jQuery("div#formWithCustomLayout").show();
+    }
+
+    /**
      * Control the visibility of edit mode-only elements.
      */
     jQuery(".editMode").hide();
@@ -198,10 +206,7 @@ Form Customisation Release: YYMMDD
   function renderForm() {
     initialiseForm();
     registerFormEvents();
-    if (_isCustomLayoutUsed) {
-      vfApplyCustomLayout();
-      jQuery("div#formWithCustomLayout").show();
-    }
+    jQuery("#onetIDListForm").delay(500).fadeIn(500);
     if (_checkingForPulse) {
       setTimeout(function() { alert(__respondToPulseCheck); },500);
     }
