Stabilisation after going object-oriented
General tidy-up plus format validation of locale code

--- a/vf-list-boilerplate.html
+++ b/vf-list-boilerplate.html
@@ -17,7 +17,7 @@ Form Customisation Release: YYMMDD
   vf.platformVersion="Online"; // "Online", "2016", "2013", or "2010"
   vf.siteName="My SharePoint Site";
   vf.listName="My SharePoint List";
-  vf.locale="en-AU"; // for example, "en-AU"
+  vf.locale="en-AU"; // Language and region, for example: "en-AU"
   vf.isCustomLayoutUsed=true; // See https://kimmaker.com/doc/211
   vf.pulseCheck=false; // Switch to false after initial testing.
 
