Further stabilisation after going object-oriented
Revised class methods

--- a/vf-list-boilerplate.html
+++ b/vf-list-boilerplate.html
@@ -26,7 +26,7 @@ Form Customisation Release: YYMMDD
   vf.locale="en-AU"; // Language and region, for example: "en-AU"
   vf.isCustomLayoutUsed=true; // See https://kimmaker.com/doc/211
   vf.pulseCheck=false; // Switch to false after initial testing.
-  console.log(vf.obtainObjectSignature());
+  console.log(vf.produceSignature());
 
   // Set list-specific variables.
   var _itemID=""; // This will be made known on DispForm and EditForm.
